--- a/final project/index.css
+++ b/final project/index.css
@@ -42,10 +42,13 @@ main {
     margin-right: 15px;
     margin-left: 15px;
     padding-bottom: 17px;
-    padding-top: 5px;
+    padding-top: 3px;
+    border: 2px solid #420C14;
 }
 .genre-preview {
     opacity: 80%;
+    height: 200px;
+    width: 300px;
 }
 button:hover .genre-preview {
     opacity: 100%
@@ -53,9 +56,10 @@ button:hover .genre-preview {
 
 button {
     border-radius: 0px;
-    color: black;
+    color: #420C14;
     background-color: white;
     border: none;
+    font-weight: 600;
 }
 button:hover {
     background-color: #420C14;
@@ -64,17 +68,14 @@ button:hover {
 }
 
 
-
-/* media queries to revise grid layout */
-
-/* tablet */
-
-@media only screen and (max-width: 1000px) {
-
-}
-
-/* phone */
-
 @media only screen and (max-width: 600px) {
-
+    .genre-preview {
+        height: 160px;
+        width: 240px;
+    }
+    .card {
+       width: 246px;
+       height: 202px;
+    }
 }
+
