--- a/final project/pages/subpages.css
+++ b/final project/pages/subpages.css
@@ -66,6 +66,7 @@ input {
     padding-top: 10%;
     padding-bottom: 10%;
     background-color: black;
+    opacity: 100%;
 }
 .v:checked + label > img {
     position: fixed;
@@ -75,6 +76,7 @@ input {
     padding-left: 10%;
     padding-right: 10%;
     background-color: black;
+    opacity:100%;
 }
 
 
